--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "typewriter-effect": "^2.20.1"
+  },
+  "devDependencies": {
+    "@dagger.io/dagger": "^0.8.2"
   }
 }
